// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message should render as moderator 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div>
    <span
        style={
            Object {
                "color": "#b2b2b2",
              }
        }
    >
        [
        00
        :
        00
        ] 
    </span>
    <span
        style={
            Object {
                "color": "#BF3434",
                "fontWeight": 800,
              }
        }
    >
        foo123
        : 
    </span>
    <span
        style={Object {}}
    >
        bar456
    </span>
</div>,
  "nodes": Array [
    <div>
      <span
            style={
                  Object {
                        "color": "#b2b2b2",
                      }
            }
      >
            [
            00
            :
            00
            ] 
      </span>
      <span
            style={
                  Object {
                        "color": "#BF3434",
                        "fontWeight": 800,
                      }
            }
      >
            foo123
            : 
      </span>
      <span
            style={Object {}}
      >
            bar456
      </span>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Message
        message="bar456"
        sentDate={"2017-01-01T00:00:00.000Z"}
        user="foo123"
        userType={1}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Message {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "message": "bar456",
          "sentDate": "2017-01-01T00:00:00.000Z",
          "user": "foo123",
          "userType": 1,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div>
          <span
                    style={
                              Object {
                                        "color": "#b2b2b2",
                                      }
                    }
          >
                    [
                    00
                    :
                    00
                    ] 
          </span>
          <span
                    style={
                              Object {
                                        "color": "#BF3434",
                                        "fontWeight": 800,
                                      }
                    }
          >
                    foo123
                    : 
          </span>
          <span
                    style={Object {}}
          >
                    bar456
          </span>
</div>,
        "_debugID": 4,
        "_renderedOutput": <div>
          <span
                    style={
                              Object {
                                        "color": "#b2b2b2",
                                      }
                    }
          >
                    [
                    00
                    :
                    00
                    ] 
          </span>
          <span
                    style={
                              Object {
                                        "color": "#BF3434",
                                        "fontWeight": 800,
                                      }
                    }
          >
                    foo123
                    : 
          </span>
          <span
                    style={Object {}}
          >
                    bar456
          </span>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Message
    message="bar456"
    sentDate={"2017-01-01T00:00:00.000Z"}
    user="foo123"
    userType={1}
/>,
}
`;

exports[`Message should render as regular 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div>
    <span
        style={
            Object {
                "color": "#b2b2b2",
              }
        }
    >
        [
        00
        :
        00
        ] 
    </span>
    <span
        style={
            Object {
                "color": "#ffc561",
                "fontWeight": 800,
              }
        }
    >
        foo123
        : 
    </span>
    <span
        style={Object {}}
    >
        bar456
    </span>
</div>,
  "nodes": Array [
    <div>
      <span
            style={
                  Object {
                        "color": "#b2b2b2",
                      }
            }
      >
            [
            00
            :
            00
            ] 
      </span>
      <span
            style={
                  Object {
                        "color": "#ffc561",
                        "fontWeight": 800,
                      }
            }
      >
            foo123
            : 
      </span>
      <span
            style={Object {}}
      >
            bar456
      </span>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Message
        message="bar456"
        sentDate={"2017-01-01T00:00:00.000Z"}
        user="foo123"
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Message {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "message": "bar456",
          "sentDate": "2017-01-01T00:00:00.000Z",
          "user": "foo123",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div>
          <span
                    style={
                              Object {
                                        "color": "#b2b2b2",
                                      }
                    }
          >
                    [
                    00
                    :
                    00
                    ] 
          </span>
          <span
                    style={
                              Object {
                                        "color": "#ffc561",
                                        "fontWeight": 800,
                                      }
                    }
          >
                    foo123
                    : 
          </span>
          <span
                    style={Object {}}
          >
                    bar456
          </span>
</div>,
        "_debugID": 2,
        "_renderedOutput": <div>
          <span
                    style={
                              Object {
                                        "color": "#b2b2b2",
                                      }
                    }
          >
                    [
                    00
                    :
                    00
                    ] 
          </span>
          <span
                    style={
                              Object {
                                        "color": "#ffc561",
                                        "fontWeight": 800,
                                      }
                    }
          >
                    foo123
                    : 
          </span>
          <span
                    style={Object {}}
          >
                    bar456
          </span>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Message
    message="bar456"
    sentDate={"2017-01-01T00:00:00.000Z"}
    user="foo123"
/>,
}
`;

exports[`Message should render as self 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div>
    <span
        style={
            Object {
                "color": "#b2b2b2",
              }
        }
    >
        [
        00
        :
        00
        ] 
    </span>
    <span
        style={
            Object {
                "color": "#CECECE",
                "fontWeight": 800,
              }
        }
    >
        foo123
        : 
    </span>
    <span
        style={Object {}}
    >
        bar456
    </span>
</div>,
  "nodes": Array [
    <div>
      <span
            style={
                  Object {
                        "color": "#b2b2b2",
                      }
            }
      >
            [
            00
            :
            00
            ] 
      </span>
      <span
            style={
                  Object {
                        "color": "#CECECE",
                        "fontWeight": 800,
                      }
            }
      >
            foo123
            : 
      </span>
      <span
            style={Object {}}
      >
            bar456
      </span>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Message
        message="bar456"
        sentDate={"2017-01-01T00:00:00.000Z"}
        user="foo123"
        userType={2}
/>,
      "_debugID": 5,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Message {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "message": "bar456",
          "sentDate": "2017-01-01T00:00:00.000Z",
          "user": "foo123",
          "userType": 2,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div>
          <span
                    style={
                              Object {
                                        "color": "#b2b2b2",
                                      }
                    }
          >
                    [
                    00
                    :
                    00
                    ] 
          </span>
          <span
                    style={
                              Object {
                                        "color": "#CECECE",
                                        "fontWeight": 800,
                                      }
                    }
          >
                    foo123
                    : 
          </span>
          <span
                    style={Object {}}
          >
                    bar456
          </span>
</div>,
        "_debugID": 6,
        "_renderedOutput": <div>
          <span
                    style={
                              Object {
                                        "color": "#b2b2b2",
                                      }
                    }
          >
                    [
                    00
                    :
                    00
                    ] 
          </span>
          <span
                    style={
                              Object {
                                        "color": "#CECECE",
                                        "fontWeight": 800,
                                      }
                    }
          >
                    foo123
                    : 
          </span>
          <span
                    style={Object {}}
          >
                    bar456
          </span>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Message
    message="bar456"
    sentDate={"2017-01-01T00:00:00.000Z"}
    user="foo123"
    userType={2}
/>,
}
`;

exports[`Message should render as system 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div>
    <span
        style={
            Object {
                "color": "#ADADAD",
              }
        }
    >
        bar456
    </span>
</div>,
  "nodes": Array [
    <div>
      <span
            style={
                  Object {
                        "color": "#ADADAD",
                      }
            }
      >
            bar456
      </span>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Message
        message="bar456"
        sentDate={"2017-01-01T00:00:00.000Z"}
        user="foo123"
        userType={3}
/>,
      "_debugID": 7,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Message {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "message": "bar456",
          "sentDate": "2017-01-01T00:00:00.000Z",
          "user": "foo123",
          "userType": 3,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 4,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div>
          <span
                    style={
                              Object {
                                        "color": "#ADADAD",
                                      }
                    }
          >
                    bar456
          </span>
</div>,
        "_debugID": 8,
        "_renderedOutput": <div>
          <span
                    style={
                              Object {
                                        "color": "#ADADAD",
                                      }
                    }
          >
                    bar456
          </span>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Message
    message="bar456"
    sentDate={"2017-01-01T00:00:00.000Z"}
    user="foo123"
    userType={3}
/>,
}
`;
